--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
           </div>
         </li>
         <!-- Notifications Dropdown Menu -->
-        <li class="nav-item dropdown">
+        {% comment %} <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" href="#">
             <i class="far fa-bell"></i>
             <span class="badge badge-warning navbar-badge">4</span>
@@ -86,7 +86,7 @@
             </a>
 
           </div>
-        </li>
+        </li> {% endcomment %}
         <li class="nav-item dropdown user-menu">
           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
             <img src="{% static 'img/user2-160x160.jpg' %}" class="user-image img-circle elevation-2" alt="User Image">
@@ -356,7 +356,7 @@
             {% endif %}
             {% if datos.role == 2 %}
             <li class="nav-item">
-              <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
+              <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboardFuncionario' %} active {% endif %}">
                 <i class="nav-icon fa fa-tachometer-alt"></i>
                 <p>
                   Resumen de tareas
