--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
           </div>
         </li>
         <!-- Notifications Dropdown Menu -->
-        <li class="nav-item dropdown">
+        {% comment %} <li class="nav-item dropdown">
           <a class="nav-link" data-toggle="dropdown" href="#">
             <i class="far fa-bell"></i>
             <span class="badge badge-warning navbar-badge">4</span>
@@ -86,7 +86,7 @@
             </a>
 
           </div>
-        </li>
+        </li> {% endcomment %}
         <li class="nav-item dropdown user-menu">
           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
             <img src="{% static 'img/user2-160x160.jpg' %}" class="user-image img-circle elevation-2" alt="User Image">
@@ -200,12 +200,6 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link {% if datos.menu == dashboard %} active {% endif %}">
-                <i class="nav-icon fa fa-chart-pie text-warning"></i>
-                <p>Reportes</p>
-              </a>
-            </li>
-            <li class="nav-item">
               <a href="#" class="nav-link">
                 <i class="nav-icon fa fa-clipboard-list text-info"></i>
                 <p>Recursos
@@ -232,31 +226,7 @@
                     </p>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a href="" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>
-                      Flujo de tareas
-                      <i class="right fas fa-angle-left"></i>
-                    </p>
-                  </a>
-                  <ul class="nav nav-treeview" style="display: none;">
-                    <li class="nav-item">
-                      <a href="{% url 'workflowlist' %}"
-                        class="nav-link {% if datos.menu == 'workflowlist' %} active {% endif %}">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Listar</p>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="{% url 'workflownew' %}"
-                        class="nav-link {% if datos.menu == 'workflownew' %} active {% endif %}">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Crear</p>
-                      </a>
-                    </li>
-                  </ul>
-                </li>
+
                  <li class="nav-item">
                   <a href="" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
@@ -356,7 +326,7 @@
             {% endif %}
             {% if datos.role == 2 %}
             <li class="nav-item">
-              <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboard' %} active {% endif %}">
+              <a href="{% url 'dashboard' %}" class="nav-link {% if datos.menu == 'dashboardFuncionario' %} active {% endif %}">
                 <i class="nav-icon fa fa-tachometer-alt"></i>
                 <p>
                   Resumen de tareas
